<resources>
    <string name="app_name">携手兼职</string>
    <string name="title_home">首页</string>
    <string name="title_sort">分类大厅</string>
    <string name="title_dashboard">我的任务</string>
    <string name="title_notifications">个人中心</string>
    <string name="no_data">暂无数据</string>
    <string name="loading">加载中...</string>
    <string name="login_in">登录</string>
    <string name="account_tips">手机号/用户名</string>
    <string name="password">密码</string>
    <string name="contact_us">登录遇到问题？联系我们</string>
    <string name="forget_password">忘记密码</string>
    <string name="go_register_tips">快速注册</string>
    <string name="register">注册</string>
    <string name="phone_tips">请输入手机号</string>
    <string name="get_invite_code">没有邀请码，请点击这里</string>
    <string name="code_tips">请输入验证码</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="invide_code_tips">请输入邀请码</string>
    <string name="get_password_tips">请输入密码</string>
    <string name="get_password_tips_repeat">请确认输入密码</string>
    <string name="money_unit">¥</string>
    <string name="cp_locating">定位中..</string>
    <string name="cp_located_failed">定位失败</string>
    <string name="cancle">取消</string>
    <string name="appbar_scroll">com.task.system.common.AppBarLayoutBehavior</string>
    <string name="choose">选择</string>
    <string name="double_click_exit">连续点击两次退出</string>
    <string name="create_account_tips">请创建一个用户名</string>
    <string name="create_password_tips">请设置6~12位数密码</string>
    <string name="end_time">结束时间：%s</string>
    <string name="wait_time">审核时间：%s </string>
    <string name="easy_or">难易程度：%s</string>
    <string name="deposit_score">保证金：%s</string>
    <string name="left_num">剩余名额：%s</string>
    <string name="task_id">任务ID：%S</string>
    <string name="modify_password">修改密码</string>
    <string name="old_password_tips">请输入旧密码</string>
    <string name="get_new_password_tips">请输入新密码</string>
    <string name="get_new_password_tips_repeat">请再次输入新密码</string>
    <string name="new_phone_tips">输入新手机号</string>
    <string name="title_activity_my_income">MyIncomeActivity</string>
    <string name="withdraw_tips">提现小贴士：\n1.提现金额必须为整数。比如：10元、15元\n 2.提现金额≥10元/次。</string>
    <string name="input_your_name">请输入您的姓名</string>
    <string name="please_choose_account_type">请选择账号类型</string>
    <string name="please_input_account">请输入银行卡/支付宝账号</string>
    <string name="end_time_tips">剩余时间：%s</string>
    <string name="pass_time_tips">通过时间：%s</string>
    <string name="not_pass_time_tips">未通过时间：%s</string>
    <string name="modify_price_time_tips">改价时间：%s</string>
    <string name="destory_time_tips">已作废时间：%s</string>
    <string name="title_activity_task_work_step_one">TaskWorkStepOneActivity</string>
    <string name="do_task_title">支付宝天天领红包</string>
    <string name="put_content">请输入内容</string>
    <string name="old_phone_tips">请输入当前手机号</string>
    <string name="tab_mytask">我的任务</string>
    <string name="agent_finish_tast">完成任务数    %s  件</string>
    <string name="agent_create_value">创造价值    %s  分</string>
    <string name="new_num">新增会员数：%s 人</string>
    <string name="fanyong_rate_tips">如果修改，下级所有奖金比例都设置为：%s</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="index">%1$01d/%2$01d</string>
    <string name="add_new_memner">新增会员</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="register_new"><![CDATA[注册&绑定]]></string>
    <string name="input_your_username">请输入您的用户名</string>
    <string name="submit">提交</string>
    <string name="my_area_manage">我的运营商</string>
    <string name="no_reason_tips">审核理由不存在</string>
    <string name="search_all_things">搜索所有兼职</string>
</resources>
