<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:cardElevation="2dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="@dimen/text_size_normal_up"
                        android:textStyle="bold"
                        android:textColor="@color/color_tittle"
                        android:text="任务金额"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <TextView
                        android:id="@+id/tv_money"
                        android:textSize="@dimen/text_size_normal_up"
                        android:textStyle="bold"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/red"
                        android:text="@string/money_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:background="@drawable/shape_dash_line"
                    />


            <TextView
                android:id="@+id/tv_end_time"
                android:drawableLeft="@mipmap/iv_end_time"
                android:layout_width="wrap_content"
                android:text="@string/end_time"
                android:gravity="center_vertical"
                android:textColor="@color/color_info"
                android:drawablePadding="@dimen/image_padding"
                android:textSize="@dimen/text_size_normal"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_wait_time"
                android:drawableLeft="@mipmap/iv_wait_time"
                android:layout_width="wrap_content"
                android:text="@string/wait_time"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/image_padding_big"
                android:layout_marginBottom="@dimen/image_padding_big"
                android:textColor="@color/color_info"
                android:drawablePadding="@dimen/image_padding"
                android:textSize="@dimen/text_size_normal"
                android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/tv_easy_or"
                    android:drawableLeft="@mipmap/iv_easy_or"
                    android:layout_width="wrap_content"
                    android:text="@string/easy_or"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_info"
                    android:drawablePadding="@dimen/image_padding"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_left_num"
                    android:drawableLeft="@mipmap/iv_left_num"
                    android:layout_width="wrap_content"
                    android:text="@string/left_num"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/image_padding_big"
                    android:layout_marginBottom="@dimen/image_padding_big"
                    android:textColor="@color/color_info"
                    android:drawablePadding="@dimen/image_padding"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>



        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/text_size_normal_up"
                android:textStyle="bold"
                android:textColor="@color/color_tittle"
                android:text="任务描述"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tv_task_id"
                android:textSize="@dimen/text_size_normal"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_info"
                android:text="@string/task_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/shape_dash_line"
            />



        <com.task.system.common.RichTextView
            android:id="@+id/rich_text"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@color/white"
            android:lineSpacingMultiplier="1.3"
            android:textColor="@color/color_info"
            android:textSize="@dimen/text_size_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>


