<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_divider_color"
    android:orientation="vertical"
    tools:context=".activity.AddCountActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="姓名"
            android:textColor="@color/color_tittle"
            android:textSize="@dimen/text_size_normal" />


        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right"
            android:hint="@string/input_your_name"
            android:padding="@dimen/image_padding"
            android:textColor="@color/color_date"
            android:textSize="@dimen/text_size_normal" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="账户类型"
            android:textColor="@color/color_tittle"
            android:textSize="@dimen/text_size_normal" />


        <TextView
            android:id="@+id/tv_account_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@null"
            android:drawableRight="@mipmap/arrow_down_small"
            android:drawablePadding="@dimen/image_padding"
            android:gravity="right"
            android:hint="@string/please_choose_account_type"
            android:padding="@dimen/image_padding"
            android:textColor="@color/color_date"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="账号"
            android:textColor="@color/color_tittle"
            android:textSize="@dimen/text_size_normal" />


        <EditText
            android:id="@+id/et_for_withdraw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right"
            android:hint="@string/please_input_account"
            android:padding="@dimen/image_padding"
            android:singleLine="true"
            android:textColor="@color/color_date"
            android:textCursorDrawable="@drawable/edit_cursor_drawable"
            android:textSize="@dimen/text_size_normal" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">


        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/image_padding_big"
            android:layout_marginRight="@dimen/nav_bar_height"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/code_tips"
            android:inputType="number"
            android:maxLength="6"
            android:singleLine="true"
            android:textColor="@color/color_tittle"
            android:textColorHint="@color/color_date"
            android:textCursorDrawable="@drawable/edit_cursor_drawable"
            android:textSize="@dimen/text_size_normal_up" />


        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_sms_code"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_normal_up" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_withdraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/nav_bar_height"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/nav_bar_height"
        android:background="@drawable/normal_submit_btn_gray"
        android:gravity="center"
        android:text="添加"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal" />


</LinearLayout>