<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/login_bg_top" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nav_bar_height"
        android:gravity="center"
        android:text="@string/login_in"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_larger_big"
        android:textStyle="bold" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="100dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/normal_submit_btn_gray_trans_larger"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/image_padding_big"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/image_padding_big">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/user" />

                    <EditText
                        android:id="@+id/et_accont"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/image_padding_big"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ellipsize="end"
                        android:hint="@string/account_tips"
                        android:singleLine="true"
                        android:textColor="@color/color_tittle"
                        android:textColorHint="@color/color_date"
                        android:textCursorDrawable="@drawable/edit_cursor_drawable"
                        android:textSize="@dimen/text_size_normal_up" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/status_bar_height"
                    android:background="@drawable/normal_submit_btn_gray_trans_larger"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/image_padding_big"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/image_padding_big">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/password" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/image_padding_big"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ellipsize="end"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/color_tittle"
                        android:textColorHint="@color/color_date"
                        android:textCursorDrawable="@drawable/edit_cursor_drawable"
                        android:textSize="@dimen/text_size_normal_up" />

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/image_padding_big"
                        android:paddingBottom="@dimen/image_padding_big"
                        android:text="@string/contact_us"
                        android:textColor="@color/color_date"
                        android:textSize="@dimen/text_size_normal_down" />


                    <TextView
                        android:id="@+id/tv_forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingTop="@dimen/image_padding_big"
                        android:paddingBottom="@dimen/image_padding_big"
                        android:text="@string/forget_password"
                        android:textColor="@color/color_date"
                        android:textSize="@dimen/text_size_normal_down" />

                </RelativeLayout>


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:background="@drawable/normal_submit_btn_gray_large"
                    android:gravity="center"
                    android:text="@string/login_in"
                    android:textColor="@color/color_tittle"
                    android:textSize="@dimen/text_size_normal_up"
                    android:textStyle="bold" />


            </LinearLayout>


            <TextView
                android:id="@+id/tv_go_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/titlebar_height"
                android:drawableRight="@mipmap/regist_arrow"
                android:drawablePadding="@dimen/image_padding"
                android:padding="@dimen/image_padding_big"
                android:paddingTop="@dimen/image_padding_big"
                android:paddingBottom="@dimen/image_padding_big"
                android:text="@string/go_register_tips"
                android:textColor="@color/register"
                android:textSize="@dimen/text_size_normal_down" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>