<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/login_bg_top" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/nav_bar_height"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_back"
            android:src="@mipmap/icon_back_white"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/modify_password"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_larger_big"
            android:textStyle="bold" />
    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="100dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_submit_btn_gray_trans_larger"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/image_padding_big"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/image_padding_big">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/user" />

                <EditText
                    android:id="@+id/old_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/image_padding_big"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/old_password_tips"
                    android:singleLine="true"
                    android:textColor="@color/color_tittle"
                    android:textColorHint="@color/color_date"
                    android:textCursorDrawable="@drawable/edit_cursor_drawable"
                    android:textSize="@dimen/text_size_normal_up" />

            </LinearLayout>





            <EditText
                android:id="@+id/et_password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_submit_btn_gray_trans_larger"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/status_bar_height"
                android:hint="@string/get_new_password_tips"
                android:singleLine="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/image_padding_big"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/image_padding_big"
                android:textColor="@color/color_tittle"
                android:textColorHint="@color/color_date"
                android:textCursorDrawable="@drawable/edit_cursor_drawable"
                android:textSize="@dimen/text_size_normal_up" />



            <EditText
                android:id="@+id/et_password_new_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_submit_btn_gray_trans_larger"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/get_new_password_tips_repeat"
                android:singleLine="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/image_padding_big"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/image_padding_big"
                android:textColor="@color/color_tittle"
                android:textColorHint="@color/color_date"
                android:textCursorDrawable="@drawable/edit_cursor_drawable"
                android:textSize="@dimen/text_size_normal_up" />








            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_bar_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/normal_submit_btn_gray_large"
                android:gravity="center"
                android:text="确定"
                android:textColor="@color/color_tittle"
                android:textSize="@dimen/text_size_normal_up"
                android:textStyle="bold" />


        </LinearLayout>





    </androidx.cardview.widget.CardView>


</RelativeLayout>